update to specs to align with new content generator function

--- a/schemas/common/visual-style.yaml
+++ b/schemas/common/visual-style.yaml
@@ -30,4 +30,4 @@ properties:
         maximum: 1
       position:
         type: string
-        enum: [top, bottom, full]
+        enum: [top, bottom, center, full]
