--- a/schemas/brand.yaml
+++ b/schemas/brand.yaml
@@ -18,13 +18,13 @@ components:
           example: "@brandaccount"
         accessToken:
           type: string
-          description: OAuth access token
-          format: password
+          description: access token
+          format: string
           example: "oauth2_access_token"
         refreshToken:
           type: string
-          description: OAuth refresh token
-          format: password
+          description: refresh token
+          format: string
           example: "oauth2_refresh_token"
         expiresAt:
           type: string
