--- a/schemas/common/visual-style.yaml
+++ b/schemas/common/visual-style.yaml
@@ -1,45 +1,47 @@
 type: object
 properties:
-  container:
-    type: object
-    description: Layout container properties
-    properties:
-      align:
-        type: string
-        enum: [left, center, right]
-        description: Horizontal alignment for the container
-      vertical:
-        type: string
-        enum: [top, middle, bottom]
-        description: Vertical alignment for the container
-      opacity:
-        type: number
-        minimum: 0
-        maximum: 1
-        description: Opacity of the overlay
   themes:
     type: array
+    minItems: 1
     description: List of visual themes, each with its own style settings
     items:
       type: object
+      required:
+        - fontFamily
+        - fontSize
+        - textColor
+        - backgroundColor
+        - boxColor
       properties:
-        font:
+        fontFamily:
           type: string
-          description: Font family for the theme
+          description: Font family for the main text (e.g., Arial).
         fontSize:
           type: string
-          description: Font size for the theme (e.g., '16px', '1em')
+          description: Font size (e.g., "32px").
+        textColor:
+          type: string
+          description: Color for the main text (e.g., "#000000").
+        backgroundColor:
+          type: string
+          description: Background color for the image (e.g., "#FFFFFF").
+        boxColor:
+          type: string
+          description: Color for the box below the image (e.g., "#333333").
         fontWeight:
           type: string
           enum: [normal, bold]
-          description: Font weight for the theme
+          description: Font weight for the main text.
         fontStyle:
           type: string
           enum: [normal, italic]
-          description: Font style for the theme
-        fontColor:
+          description: Font style for the main text.
+        boxTextColor:
           type: string
-          description: Font color for the theme
-        backgroundColor:
+          description: Color for the box text (default "#FFFFFF").
+        outlineColor:
           type: string
-          description: Background color for the theme
+          description: Color for text outline (if supported by Pillow and font).
+        outlineWidth:
+          type: integer
+          description: Width of the text outline in pixels (if supported).
