update to specs to create operations and update based on visual needs for pillow

--- a/schemas/content-template.yaml
+++ b/schemas/content-template.yaml
@@ -71,6 +71,8 @@ components:
                 List of variables available for use in the userPrompt and systemPrompt.
         visualStyle:
           $ref: './common/visual-style.yaml'
+        image:
+          $ref: './content-types/image.yaml'
 
     TemplateInfo:
       type: object
