update to content

--- a/operations/internal/frontend/content-template/update-content-template.yaml
+++ b/operations/internal/frontend/content-template/update-content-template.yaml
@@ -48,6 +48,24 @@ paths:
                 properties:
                   error:
                     type: string
+        '422':
+          description: Validation failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  details:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        field:
+                          type: string
+                        message:
+                          type: string
         '500':
           description: Internal server error
           content:
