--- a/operations/internal/function/generate-image.yaml
+++ b/operations/internal/function/generate-image.yaml
@@ -17,39 +17,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              required:
-                - text
-              properties:
-                text:
-                  type: string
-                  description: Main text to render on the image.
-                boxText:
-                  type: string
-                  description: Optional secondary text or caption. If provided, a box is drawn below the image.
-                visualStyle:
-                  $ref: '../../schemas/common/visual-style.yaml'
-                image:
-                  $ref: '../../schemas/content-types/image.yaml'
-                textBox:
-                  type: object
-                  description: Optional box behind the main text with customizable color, outline, and transparency.
-                  properties:
-                    color:
-                      type: string
-                      description: Background color of the text box (e.g., '#FFFFFF').
-                    alpha:
-                      type: integer
-                      description: Alpha (transparency) value for the text box (0-255).
-                    outlineColor:
-                      type: string
-                      description: Outline color for the text box.
-                    outlineWidth:
-                      type: integer
-                      description: Outline width for the text box.
-                    padding:
-                      type: integer
-                      description: Padding inside the text box.
+              $ref: '../../../schemas/content-types/image.yaml'
       responses:
         '200':
           description: Image generated successfully
@@ -76,4 +44,3 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
-# Updated to align with advanced font management, text box support, and background image centering.
